fixed chatbox alignments

--- a/components/Showcase/ShowComp/AIChat/AIChat.module.scss
+++ b/components/Showcase/ShowComp/AIChat/AIChat.module.scss
@@ -1,12 +1,8 @@
 .AIChat {
-  margin-bottom: 25px;
+  padding-bottom: 25px;
   display: flex;
   flex-direction: column;
-  height: 95vh;
-
-  @media (max-width: 1030px) {
-    height: 85vh;
-  }
+  height: 100vh;
 
   .tokenWallet {
     margin-top: 25px;
